--- a/nvme-rhel-87.adoc
+++ b/nvme-rhel-87.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.7. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 8.7:
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.7. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 8.7:
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
 * In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.7; you must enable it manually.
@@ -27,7 +27,7 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Verify the software version and NVMe configuration
  
-You can use the following procedure to validate the minimum supported RHEL 8.7 software versions.
+include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
@@ -38,7 +38,7 @@ You can use the following procedure to validate the minimum supported RHEL 8.7 s
 uname -r
 ----
 +
-The following example shows a RHEL 8.7 kernel version:
+Example RHEL kernel version:
 +
 ----
 4.18.0-425.3.1.el8.x86_64
@@ -312,11 +312,11 @@ The expected output is 1.
 .TCP
 --
 
-The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually.
+The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
 
 .Steps
 
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+. Check that the initiator port can get the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
