--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 10.0 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10.0. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10.0. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
 
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
@@ -26,7 +26,7 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Verify the software version and NVMe configuration
 
-Use the following procedure to validate that your RHEL 10.0 system meets the software requirements and verify the NVMe package installations and host configuration.
+include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
@@ -37,7 +37,7 @@ Use the following procedure to validate that your RHEL 10.0 system meets the sof
 uname -r
 ----
 +
-The following example shows a RHEL kernel version:
+Example RHEL kernel version:
 +
 ----
 6.12.0-55.9.1.el10_0.x86_64
@@ -298,7 +298,7 @@ The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you c
 
 .Steps
 
-. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
+. Check that the initiator port can get the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
