--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.1 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.1. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 9.1:
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.1. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 9.1:
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
 
@@ -25,7 +25,7 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Verify the software version and NVMe configuration
  
-You can use the following procedure to verify the minimum supported RHEL 9.1 software versions and NVMe configuration.
+include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
@@ -36,7 +36,7 @@ You can use the following procedure to verify the minimum supported RHEL 9.1 sof
 uname -r
 ----
 +
-The following example shows a RHEL 9.1 kernel version:
+Example RHEL kernel version:
 +
 ----
 5.14.0-162.6.1.el9_1.x86_64
@@ -284,11 +284,11 @@ The expected output is 1.
 .TCP
 --
 
-The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually.
+The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
 
 .Steps
 
-. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
+. Check that the initiator port can get the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
