--- a/nvme-rhel-95.adoc
+++ b/nvme-rhel-95.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.5. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. There are no known limitations for RHEL 9.5.
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.5. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. There are no known limitations for RHEL 9.5.
 
 == Step 1: Optionally, enable SAN booting
 
@@ -23,7 +23,7 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Verify the software version and NVMe configuration
 
-Use the following procedure to validate that your RHEL 9.5 system meets the software requirements and verify the NVMe package installations and host configuration.
+include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
@@ -34,7 +34,7 @@ Use the following procedure to validate that your RHEL 9.5 system meets the soft
 uname -r
 ----
 +
-The following example shows a RHEL kernel version:
+Example RHEL kernel version:
 +
 ----
 5.14.0-503.11.1.el9_5.x86_64
@@ -294,11 +294,11 @@ The expected ouptut is 1.
 .TCP
 --
 
-The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually
+The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
 
 .Steps
 
-. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
+. Check that the initiator port can get the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
