Update supported systems for LUHU 8.0

--- a/hu-luhu-80.adoc
+++ b/hu-luhu-80.adoc
@@ -20,7 +20,7 @@ Linux Host Utilities 8.0 supports the following distribution types:
 *	Red Hat Enterprise Linux
 *	SUSE Linux Enterprise Server
 *	Oracle Linux
-*	Oracle VM
+*	Ubuntu
 
 NOTE: The Linux Host Utilities software doesn't support NVMe over Fibre Channel (NVMe/FC) and NVMe over TCP (NVMe/TCP) host protocols.
 
