--- a/_include/windows/windows_hotfix_install.adoc
+++ b/_include/windows/windows_hotfix_install.adoc
@@ -4,4 +4,4 @@ NOTE: You need to contact Microsoft support for the hotfixes that aren't availab
 [start=2]
 . Follow the instructions provided by Microsoft to install the hotfixes.
 
-TIP: Many hotfixes require a reboot of your Windows host. You can choose to wait to reboot the host until _after_ you install or upgrade the Host Utilities.
+TIP: Many hotfixes require a Windows host reboot. You can wait to reboot the host until _after_ you install or upgrade the Host Utilities.
