--- a/_include/windows/windows_install_WUHU.adoc
+++ b/_include/windows/windows_install_WUHU.adoc
@@ -1,5 +1,5 @@
 == Step 3: Install the Windows Host Utilities
 
-The Windows Host Utilities are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. NetApp recommends downloading and installing the latest Windows Host Utilities to support ONTAP LUN management and assist technical support with gathering configuration data. 
+The Windows Host Utilities are a set of software programs with documentation that enable you to connect host computers to virtual disks (LUNs) on a NetApp SAN. NetApp recommends downloading and installing the latest Windows Host Utilities to support ONTAP LUN management and help technical support collect configuration data. 
 
 For Windows Host Utilities configuration and installation information, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Host Utilities] documentation and select the installation procedure for your Windows Host Utilities version.
