--- a/nvme-rockylinux-84.adoc
+++ b/nvme-rockylinux-84.adoc
@@ -4,7 +4,7 @@ permalink: nvme-rockylinux-84.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.4 with ONTAP
 ---
-= Configure Rocky Linux 8.4 with NVMe-oF for ONTAP storage
+= Configure Rocky Linux 8.4 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,59 +13,53 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 8.4 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-Rocky Linux 8.4 hosts support the NVMe/FC and NVMe/TCP protocols with Asymmetric Namespace Access (ANA). ANA is equivalent to asymmetric logical unit access (ALUA) multipathing in iSCSI and FCP environments and is implemented using the in-kernel NVMe multipath feature.
+include::_include/nvme/nvme-introduction.adoc[]
 
-For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 8.4. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for Rocky Linux 8.4:
 
-.About this task 
-You can use the following support and features with the NVMe-oF host configuration for Rocky Linux 8.4. You should also review the known limitations before starting the configuration process.
-
-* Support available:
-** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-** Running NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices on SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
-* Known limitations: 
-** In-kernel NVMe multipath is disabled by default for Rocky Linux 8.4 NVMe-oF hosts. Therefore, you need to enable it manually.
-** On Rocky Linux 8.4 hosts, NVMe/TCP is a technology preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.4_release_notes/index#technology-preview_file-systems-and-storage[Rocky Linux 8.4 Release Notes^] for details.
-** SAN booting using the NVMe-oF protocol is currently not supported.
+* SAN booting using the NVMe-oF protocol is not currently supported.
+* In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in Rocky Linux 8.4; you must enable it manually.
+* NVMe/TCP is available as a technology preview due to known issues.
 
 == Step 1: Optionally, enable SAN booting
+
 include::_include/nvme/enable-san-booting.adoc[]
 
-== Step 2: Validate software versions
-Use the following procedure to validate the minimum supported Rocky Linux 8.4 software versions.
+== Step 2: Verify the software version and NVMe configuration
+
+include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
-. Install Rocky Linux 8.4 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 8.4 kernel: 
+. Install Rocky Linux 8.4 on the server. After the installation is complete, verify that you are running the required Rocky Linux 8.4 kernel: 
 +
 [source,cli]
 ----
 uname -r
 ----
 +
-The following example shows a Rocky Linux kernel version:
+Example Rocky Linux kernel version:
 +
 ----
 5.14.0-570.12.1.el9_6.x86_64
 ----
-[start=2]
+
 include::_include/nvme/linux-validate-software-version-rockylinux.adoc[]
 
-== Step 3: Configure NVMe/FC
+== Step 3: Configure NVMe/FC and NVMe/TCP
+
 include::_include/nvme/nvme-configure.adoc[]
 
-== Step 4: Optionally, enable 1MB I/O 
+== Step 4: Optionally, enable 1MB I/O for NVMe/FC
+
 include::_include/nvme/nvme-enable-1mb-io.adoc[]
 
-== Step 5: Configure NVMe/TCP
+== Step 5: Verify the multipathing configuration
 
-include::_include/nvme/nvme-configure-nvme-tcp-rocky-linux.adoc[]
-
-== Step 6: Validate NVMe-oF
 include::_include/nvme/nvme-validate-nvme-of-rocky-linux.adoc[]
 
-== Step 7: Review the known issues
+== Step 6: Review the known issues
 
-No known issues exist for the NVMe-oF host configuration on Rocky Linux 8.4 with ONTAP release.
+There are no known issues.
 
 // JIRA-1289 20-Sep-2023
